code/.snakemake/log/2021-10-05T161821.137581.snakemake.log
Full Traceback (most recent call last):
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/__init__.py", line 401, in snakemake
    print_compilation=print_compilation)
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/workflow.py", line 732, in include
    rulecount=self._rulecount)
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/parser.py", line 788, in parse
    for t, orig_token in automaton.consume():
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/parser.py", line 106, in consume
    for t, orig in self.state(token):
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/parser.py", line 732, in python
    for t in self.subautomaton(token.string).consume():
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/parser.py", line 103, in consume
    for token in self.snakefile:
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/site-packages/snakemake/parser.py", line 761, in __next__
    return next(self.tokens)
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/tokenize.py", line 585, in _tokenize
    ("<tokenize>", lnum, pos, line))
  File "<tokenize>", line 349
    output:
    ^
IndentationError: unindent does not match any outer indentation level

IndentationError in line 349 of <tokenize>:
unindent does not match any outer indentation level (<tokenize>, line 349)
  File "/Users/morril01/anaconda3/envs/snakemake-globalDA/lib/python3.6/tokenize.py", line 585, in _tokenize
